<resources>

    <string name="companywebsite">www.myandroidng.com</string>
    <string name="apartmentname">LAKSHAY APARTMENT</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="tab_date">Date</string>
    <string name="tab_time">Time</string>

    <string name="defaultapp_name">Expandable List View</string>
    <string name="maintainanceapp_name">Maintainance</string>
    <string name="postcomment_name">PostComment</string>
    <string name="mywall">TimeLine</string>
    <string name="add">Post</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Comment_hint">Enter post / comments </string>
    <string name="Lakshaya_postTitle">Post and Comments &#8230;</string>
    <string name="FlatdescriptionwithLastTransaction">The Last Maintainance deposit detail</string>
    <string name="Rs">\u20B9</string>
    <string name="rs">\u20A8</string>
    <string name="reportheader"><u><b><i>PERIOD SEP 2015</i></b></u></string>

    <string name="PayMaintaincence">Maintainance</string>

    <string name="login">LOGIN</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="go">GO</string>
    <string name="register">REGISTER</string>
    <string name="welcome">Welcome to Lakshaya</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="footer_text">Copyright © 2015 Neeraj Apps Inc.</string>

    <string-array name="paymentmode">
        <item>Cash</item>
        <item>Cheque</item>
        <item>Netbanking</item>
    </string-array>

    <string-array name="title_array">
        <item>Maintainance?</item>
        <item>Laundry Facilities?</item>
        <item>Safety and Security?</item>
        <item>Common Areas?</item>
        <item>Home Improvement?</item>
        <item>Parking?</item>
        <item>Fire?</item>
        <item>Renters?</item>
        <item>basic Rules?</item>
    </string-array>
    <color name="snow">#eee9e9</color>
    <string name="Flat_prompt">Choose a Flat</string>

    <string name="app_name">Lakshay Apartment L-2</string>
    <string name="btnTakePicture">Capture Image</string>
    <string name="btnRecordVideo">Record Video</string>
    <string name="btnTakePictureGallery">Take Picture from gallery</string>
    <string name="btnCancel">cancel</string>
    <string name="or">(or)</string>
    <string name="btnUploadToServer">Set profile Picture</string>
</resources>
